gatekeeper/templates/k8s-disallow-host-network-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
      validation:
        openAPIV3Schema:
          type: object
          properties: {}
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowhostnetwork

      violation[{"msg": msg}] {
        input.review.object.spec.hostNetwork == true
        msg := "spec.hostNetwork must not be true"
      }
